<resources>
    <string name="app_name">EzzBook</string>
    <string name="email">Email</string>
    <string name="hint_password">Password</string>
    <string name="action_sign_in_short">Register</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_login">Already registered? Click here to Login</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">Not a member? Register now!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="welcome_text">You are logged in! Welcome!</string>
    <string name="btn_qrcode_text">QR Code</string>
    <string name="btn_book">Book</string>
    <string name="btn_history">History</string>
    <string name="source_text">Source</string>
    <string name="destination_text">Destination</string>
    <string name="no_tickets_text">No.of tickets</string>
    <string name="single_journey">Single</string>
    <string name="return_journey">Return</string>
    <string name="total_text">Get Total :</string>
    <string name="tc">TC</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />
</resources>
