<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.madhura.seproject.BookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/source_text"
            android:text="@string/source_text"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/station_spinner1"
            android:backgroundTint="@color/colorAccent">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/destination_text"
            android:text="@string/destination_text"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/station_spinner2"
            android:backgroundTint="@color/colorAccent">

        </Spinner>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/no_tickets_text"
            android:layout_centerVertical="true"
            android:text="@string/no_tickets_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/no_tickets_input"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:inputType="number"
            android:layout_toRightOf="@id/no_tickets_text" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:padding="2dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:id="@+id/btn_single_journey"
            android:textColor="@color/white"
            android:text="@string/single_journey"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:textColor="@color/colorAccent"
            android:id="@+id/btn_return_journey"
            android:text="@string/return_journey"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/get_total"
            android:text="@string/total_text"
            android:background="@color/white"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/total"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:id="@+id/btn_final_book"
        android:padding="8dp"
        android:background="@color/colorAccent"
        android:text="@string/btn_book"
        android:textColor="@color/white"/>


</LinearLayout>
